fixed controls postition on mobile

--- a/jscn/jscn-style.css
+++ b/jscn/jscn-style.css
@@ -7,9 +7,9 @@ body {
 }
 
 .btn {
+  position: fixed;
   width: 50px;
   height: 50px;
-  position: fixed;
   border-radius: 25px;
   line-height: 48px;
   text-align: center;
@@ -28,7 +28,7 @@ body {
 .helpBtn {
   bottom: 20px;
   left: 20px;
-  font-size: 30px;
+  font-size: 2em;
 }
 
 .noteOverlay {
@@ -118,9 +118,13 @@ textarea {
   white-space: pre-wrap; /* current browsers */
 }
 
-/* Desktop browser, min width: 1200 */
+.note:last-child {
+  margin-bottom: 6em;
+}
 
-@media screen and (min-width: 1200px) {
+/* Desktop browser, min width: 940px */
+
+@media screen and (min-width: 940px) {
   #wrapperDiv {
     width: 50%;
     margin-left: auto;
@@ -131,5 +135,25 @@ textarea {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+/* Screens up to 939px width */
+
+@media screen and (max-width: 939px) {
+  .btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #5ee084;
+    color: #20262e;
+  }
+
+  .addNewNoteBtn {
+    line-height: 1em;
+  }
+
+  .helpBtn {
+    line-height: 1.2em;
   }
 }
